--- a/2.Lenguaje de marcas/Gallumbos Ciruelo ProyectoNavidad/index.html
+++ b/2.Lenguaje de marcas/Gallumbos Ciruelo ProyectoNavidad/index.html
@@ -20,7 +20,7 @@
     <ul class="nav-lista">
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#productos">Productos</a></li>
-      <li><a href="#coleccion">Colección</a></li>
+      <li><a href="#coleccion">FredoomFit</a></li>
       <li><a href="#contacto">Contacto</a></li>
       <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
     </ul>
@@ -51,13 +51,13 @@
       </figure>
     </section>
 
-    <!-- COLECCIÓN (sección destacada) -->
-    <section class="destacado" id="coleccion">
-      <a href="#productos" class="caja-destacada enlace-destacado">
-        <h2>Diseño Ergonómico</h2>
-        <p>Nuestra tecnología "FreedomFit" se adapta a tu cuerpo sin apretar.</p>
-      </a>
-      <a href="#contacto" class="caja-destacada enlace-destacado">
+    <!-- Cajas destacadas-->
+    <section class="destacado" id="coleccion" >
+      <div class="caja-destacada1"  >
+        <h2 >Diseño Ergonómico</h2>
+        <p>Nuestra tecnología "FreedomFit" se adapta a tu cuerpo sin apretar. Nuestra malla elástica de precisión reparte la presión de forma uniforme, evitando roces incluso en jornadas maratonianas de estudio o gimnasio. Además, el diseño anatómico evita desplazamientos incómodos, garantizando una sujeción firme pero discreta.</p>
+      </div>
+      <a href="#contacto" class="caja-destacada2"> <!--enlaza también con el formulario de contacto-->
         <h2>¿Tienes dudas?</h2>
         <p>Escríbenos y te ayudamos a elegir tu gallumbo perfecto.</p>
       </a>
@@ -69,30 +69,30 @@
 
       <div class="lista-productos">
 
-        <article class="tarjeta">
-          <h3><a href="#coleccion" class="titulo-link">Modelo Gamer Boy</a></h3>
+        <article class="tarjeta-producto">
+          <h3>Modelo Gamer Boy</h3>
           <img src="gamer.png" class="producto-img" alt="Modelo Gamer Boy">
           <p>Gallumbo morado de algodón suave para el día a día. Comodidad en tus largas horas de partidas.</p>
           <p class="precio">14,99 €</p>
         </article>
 
-        <article class="tarjeta">
-          <h3><a href="#coleccion" class="titulo-link">Modelo Fontanero</a></h3>
+        <article class="tarjeta-producto">
+          <h3>Modelo Fontanero</h3>
           <img src="fontanero.png" class="producto-img" alt="Modelo Fontanero">
           <p>Gallumbo azul. Haz que tus jornadas de trabajo sean más confortables,
              y si se te bajan los pantalones serás el rey.</p>
           <p class="precio">14,99 €</p>
         </article>
 
-        <article class="tarjeta">
-          <h3><a href="#coleccion" class="titulo-link">Modelo 1000 y 1 noches</a></h3>
+        <article class="tarjeta-producto">
+          <h3>Modelo 1000 y 1 noches</h3>
           <img src="1000y1noches.png" class="producto-img" alt="Modelo 1000 y 1 noches">
           <p>Gallumbo morado estampado estelar. El ideal para ver las estrellas con tus citas de Tinder.</p>
           <p class="precio">14,99 €</p>
         </article>
 
-        <article class="tarjeta">
-          <h3><a href="#coleccion" class="titulo-link">Modelo Percebes</a></h3>
+        <article class="tarjeta-producto">
+          <h3>Modelo Percebes</h3>
           <img src="percebes.png" class="producto-img" alt="Modelo Percebes">
           <p>Gallumbo verde. No hay nada más patriótico que el producto local, siéntete orgulloso de tu percebe.</p>
           <p class="precio">14,99 €</p>
